fix load more and scrolling fix listing not jumping back to top on page load

--- a/src/main.scss
+++ b/src/main.scss
@@ -11,6 +11,7 @@ html {
 body {
   width:100%; height:100%;
   margin:0; padding:0;
+  overflow:hidden;
 }
 .pointer {
   cursor: pointer;
@@ -38,6 +39,7 @@ $playlistWidth: 25vw;
   order: 1;
   top:$headerHeight; 
   bottom:0;
+  height:100%;
   margin-left: $sidebarWidth; 
   right:0;
   &.active {
